fix more button alignment issues

--- a/addon/styles/submit-button.scss
+++ b/addon/styles/submit-button.scss
@@ -1,8 +1,17 @@
 button[type=submit].submit-button {
   background: $accent;
+  text-align: left;
+  position: relative;
+  top: 0.25rem;
 
-  .liquid-child {
+  .liquid-container, .liquid-child {
+    height: 1rem;
+  }
+
+  &:not(.is-processing) .liquid-child {
     white-space: nowrap;
+    display: inline-grid;
+    grid-template-columns: auto auto auto;
   }
 
   .spinner {
